@@ -27,3 +27,8 @@ Artificial VCM 1.0.5.6487 2017-10-05
 New features:
  - Changed the formula of anticipated influence calculation.
  - Added KH consequent value to the details column in AgentDetailsOutput
+
+Artificial VCM 1.0.6.6489 2017-10-06
+
+New features:
+ - Changed configuration.json according to Artificial VCM 3
